syntax = "proto3";

package user.v1;

option go_package = "github.com/abgdnv/gocommerce/pkg/api/gen/go/user/v1;user_v1";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string userName = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
}

message RegisterResponse {
  string id = 1;
}
